creating divs for the nav

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,14 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GuddyTech</title>
+    <link rel="stylesheet" href="../styles/index.css">
 </head>
 <body>
-    
-<<<<<<< HEAD
+    <header>
+        <nav>
+            <div class="logo">
+
+            </div>
+        </nav>
+
+    </header>
+    <main>
+asdfadsfa
+    </main>
 </body>
 </html>
-=======
-</body>d
-</html>d
->>>>>>> d36a606 (second commit)
+
+</body>
+</html>
+
