working on the scss part

--- a/pages/index.html
+++ b/pages/index.html
@@ -10,13 +10,21 @@
     <header>
         <nav>
             <div class="logo">
-
+                <img class="logo-svg" src="./../images/GuddyTech (1).png" alt="">
+            </div>
+            <div class="nav-div">
+                <ul>
+                    <li><a class="a-links" href="./index.html">Home</a> </li>
+                    <li><a class="a-links" href="./about.html">About</a> </li>
+                    <li><a class="a-links" href="./projects.html">Projects</a> </li>
+                    <li><a class="a-links" href="./contact.html">Contact</a> </li>
+                </ul>
             </div>
         </nav>
 
     </header>
     <main>
-asdfadsfa
+
     </main>
 </body>
 </html>
