added hover effect to the links

--- a/pages/index.html
+++ b/pages/index.html
@@ -10,14 +10,14 @@
     <header>
         <nav>
             <div class="logo">
-                <img class="logo-svg" src="./../images/GuddyTech (1).png" alt="">
+                <a href="./index.html"><img class="logo-svg" src="./../images/GuddyTech (1).png" alt=""></a>
             </div>
             <div class="nav-div">
                 <ul>
-                    <li><a class="a-links" href="./index.html">Home</a> </li>
-                    <li><a class="a-links" href="./about.html">About</a> </li>
-                    <li><a class="a-links" href="./projects.html">Projects</a> </li>
-                    <li><a class="a-links" href="./contact.html">Contact</a> </li>
+                    <li><a class="a-links" href="./index.html">HOME</a> </li>
+                    <li><a class="a-links" href="./about.html">ABOUT</a> </li>
+                    <li><a class="a-links" href="./projects.html">PROJECTS</a> </li>
+                    <li><a class="a-links" href="./contact.html">CONTACT</a> </li>
                 </ul>
             </div>
         </nav>
