--- a/pages/index.html
+++ b/pages/index.html
@@ -24,6 +24,31 @@
 
     </header>
     <main>
+        <section>
+            <div>
+                <h1>DevOps Consulting</h1>
+                <p>I help startups and SMBs build better and scalable software 
+                    <br>
+                    applications by adapting an <strong>automated, collaborative</strong> & <strong>agile</strong> work 
+                    <br>
+                    methodology instead of the same  old manual processes  without breaking 
+                    <br>
+                    the bank.
+                    <br>
+                    <strong>Increase your:</strong>
+                    <br>
+
+                </p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+            <div>
+                <a href="./contact.html"><button class="contact">Contact Me</button></a>
+            </div>
+        </section>
 
     </main>
 </body>
