--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="./index.html"><img class="logo-svg" src="./../images/GuddyTech (1).png" alt=""></a>
+                <a href="./index.html"><img class="logo-svg" src="./../images/GuddyTech (1).png" alt="logo of GuddyTech"></a>
             </div>
             <div class="nav-div">
                 <ul>
@@ -25,7 +25,7 @@
     </header>
     <main>
         <section>
-            <div>
+            <div class="sec-div1">
                 <h1>DevOps Consulting</h1>
                 <p>I help startups and SMBs build better and scalable software 
                     <br>
@@ -40,10 +40,10 @@
 
                 </p>
             </div>
-            <div>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+            <div class="sec-div2">
+                <div class="sec1-div2-img"><img class="speed" src="" alt=""></div>
+                <div class="sec1-div2-img"><img class="rel" src="" alt=""></div>
+                <div class="sec1-div2-img"><img class="eff" src="" alt=""></div>
             </div>
             <div>
                 <a href="./contact.html"><button class="contact">Contact Me</button></a>
