added a background image to the home pages

--- a/pages/index.html
+++ b/pages/index.html
@@ -26,6 +26,7 @@
     <main>
         <section>
             <div class="sec-div1">
+                <br><br><br><br>
                 <h1>DevOps Consulting</h1>
                 <p>I help startups and SMBs build better and scalable software 
                     <br>
@@ -41,9 +42,9 @@
                 </p>
             </div>
             <div class="sec-div2">
-                <div class="sec1-div2-img"><img class="speed" src="" alt=""></div>
-                <div class="sec1-div2-img"><img class="rel" src="" alt=""></div>
-                <div class="sec1-div2-img"><img class="eff" src="" alt=""></div>
+                <div class="sec1-div2-img"><img class="speed" src="" alt=""> <br> <p><strong>Speed</strong></p></div>
+                <div class="sec1-div2-img"><img class="rel" src="" alt=""><br> <p><strong>Reliability</strong></p></div>
+                <div class="sec1-div2-img"><img class="eff" src="" alt=""><br> <p><strong>Efficiency</strong></p></div>
             </div>
             <div>
                 <a href="./contact.html"><button class="contact">Contact Me</button></a>
