added some svgs to the codebase

--- a/pages/index.html
+++ b/pages/index.html
@@ -42,9 +42,9 @@
                 </p>
             </div>
             <div class="sec-div2">
-                <div class="sec1-div2-img"><img class="speed" src="" alt=""> <br> <p><strong>Speed</strong></p></div>
-                <div class="sec1-div2-img"><img class="rel" src="" alt=""><br> <p><strong>Reliability</strong></p></div>
-                <div class="sec1-div2-img"><img class="eff" src="" alt=""><br> <p><strong>Efficiency</strong></p></div>
+                <div class="sec1-div2-img"><img class="speed" src="./../images/speed.png" alt="image of speed"> <br> <p><strong>Speed</strong></p></div>
+                <div class="sec1-div2-img"><img class="rel" src="./../images/Vector.png" alt="image of reliability"><br> <br><p><strong>Reliability</strong></p></div>
+                <div class="sec1-div2-img"><img class="eff" src="../images/efficiency.png" alt="image of efficiency"><br> <p><strong>Efficiency</strong></p></div>
             </div>
             <div>
                 <a href="./contact.html"><button class="contact">Contact Me</button></a>
