--- a/pages/index.html
+++ b/pages/index.html
@@ -47,7 +47,7 @@
                 <div class="sec1-div2-img"><img class="eff" src="../images/efficiency.png" alt="image of efficiency"><br> <p><strong>Efficiency</strong></p></div>
             </div>
             <br><b></b>
-            <div>
+            <div class="button-div">
                 <a href="./contact.html"><button class="contact">Contact Me</button></a>
             </div>
         </section>
