--- a/pages/index.html
+++ b/pages/index.html
@@ -28,11 +28,11 @@
             <div class="sec-div1">
                 <br><br><br><br>
                 <h1>DevOps Consulting</h1>
-                <p>I help startups and SMBs build better and scalable software 
+                <p class="p-help">I help startups and SMBs build better and scalable software 
                     <br>
                     applications by adapting an <strong>automated, collaborative</strong> & <strong>agile</strong> work 
                     <br>
-                    methodology instead of the same  old manual processes  without breaking 
+                    methodologies instead of the same  old manual processes  without breaking 
                     <br>
                     the bank.
                     <br><br><br>
@@ -46,7 +46,7 @@
                 <div class="sec1-div2-img"><img class="rel" src="./../images/Vector.png" alt="image of reliability"><br><p><strong>Reliability</strong></p></div>
                 <div class="sec1-div2-img"><img class="eff" src="../images/efficiency.png" alt="image of efficiency"><br> <p><strong>Efficiency</strong></p></div>
             </div>
-            <br><b></b>
+            <br><br>
             <div class="button-div">
                 <a href="./contact.html"><button class="contact">Contact Me</button></a>
             </div>
