--- a/pages/index.html
+++ b/pages/index.html
@@ -25,6 +25,7 @@
     </header>
     <main>
         <section>
+            <div class="svg-502-div"><img class="svg-502-img" src="./../images/Programing.svg" alt="image of a man experiencing 502 error"></div>
             <div class="sec-div1">
                 <br><br><br><br>
                 <h1>DevOps Consulting</h1>
