--- a/pages/about.html
+++ b/pages/about.html
@@ -25,11 +25,22 @@
     </header>
     <main>
         <section>
-            <div class="svg-502-div"><img class="svg-502-img" src="./../images/Programing.svg" alt="image of a man experiencing 502 error"></div>
+            <div class="svg-502-div"><img class="svg-502-img" src="./../images/Guddy Group 12.svg" alt="image of a man experiencing 502 error"></div>
             <div class="sec-div1">
                 <br><br><br><br>
-                <h1>DevOps Consulting</h1>
-                <p class="p-help">I help startups and SMBs build better and scalable software 
+                <p class="p-help">Hello, I am Okorie GoodGod,</p>
+                <h1>DevOps <br> Engineer</h1>
+                <p class="p-help">I am currently learning System Designs and Architectures, but I have embarked on some projects on AWS, Kubernetes and Docker. 
+                    I've deployed React.js and Golang applications to AWS.
+                    I've monitored resources in AWS and set up Alarms with AWS SNS and Lambda when CPU crosses a set threshold.
+                    I've worked on OpenVPN servers, created and configured the client and server with conf files.
+                    I've created yaml files for CI/CD pipelines with GitHub Actions for Docker files for applications.
+                    Built Continuous Integration and Deployment pipelines in Github Actions  and created branching strategies.
+                    Configured Docker container for branching purposes and implemented Docker automation solution for Continuous Integration and Continuous Delivery model.
+                    Created Route tables to route the traffic to find whether it is a public or private network.
+                    Performed Branching, Tagging, Release Activities on Version Control Tool GIT (GitHub)
+                    Monitoring the events using the Cloudwatch, etc.
+                    
                     <br>
                     applications by adapting an <strong>automated, collaborative</strong> & <strong>agile</strong> work 
                     <br>
