added the about texts

--- a/pages/about.html
+++ b/pages/about.html
@@ -30,23 +30,30 @@
                 <br><br><br><br>
                 <p class="p-help">Hello, I am Okorie GoodGod,</p>
                 <h1>DevOps <br> Engineer</h1>
-                <p class="p-help">I am currently learning System Designs and Architectures, but I have embarked on some projects on AWS, Kubernetes and Docker. 
+                <br>
+                <p class="p-help">I am currently learning System Designs and Architectures, 
+                    <br>
+                    but I have embarked on some projects on AWS, Kubernetes and Docker. 
+                    <br>
                     I've deployed React.js and Golang applications to AWS.
-                    I've monitored resources in AWS and set up Alarms with AWS SNS and Lambda when CPU crosses a set threshold.
+                    <br>
+                    I've monitored resources in AWS and set up Alarms with AWS SNS and Lambda 
+                    <br> when CPU crosses a set threshold.
+                    <br>
                     I've worked on OpenVPN servers, created and configured the client and server with conf files.
+                    <br>
                     I've created yaml files for CI/CD pipelines with GitHub Actions for Docker files for applications.
+                    <br>
                     Built Continuous Integration and Deployment pipelines in Github Actions  and created branching strategies.
+                    <br>
                     Configured Docker container for branching purposes and implemented Docker automation solution for Continuous Integration and Continuous Delivery model.
+                    <br>
                     Created Route tables to route the traffic to find whether it is a public or private network.
+                    <br>
                     Performed Branching, Tagging, Release Activities on Version Control Tool GIT (GitHub)
+                    <br>
                     Monitoring the events using the Cloudwatch, etc.
                     
-                    <br>
-                    applications by adapting an <strong>automated, collaborative</strong> & <strong>agile</strong> work 
-                    <br>
-                    methodologies instead of the same  old manual processes  without breaking 
-                    <br>
-                    the bank.
                     <br><br><br>
                     <strong>Increase your:</strong>
                     <br><br>
