done with phone orientation

--- a/pages/about.html
+++ b/pages/about.html
@@ -37,7 +37,7 @@
                     <ul class="ul-stat">
                         <li class="li-img"> Dynamic professional with 2+ years of comprehensive experience in Cloud and DevOps </li>
                         <li class="li-img"> Exceptional skills in Container technologies, AWS Cloud Migration, Linux Administrations, 
-                            <br> &nbsp; &nbsp; &nbsp;CI/CD Integration, working in agile environment</li>
+                            <br> CI/CD Integration, working in agile environment</li>
                         <li class="li-img"> Championed in cloud provisioning tools for IAAC</li>
                         <li class="li-img"> Good knowledge in building REST APIs using Node.Js, Springboot and configuring API Gateways</li>
                     </ul>
